[Documentation] fixes content scrollbar

--- a/docs/assets/css/styles.scss
+++ b/docs/assets/css/styles.scss
@@ -25,7 +25,7 @@
 .app-body {
     flex: 1;
     width: 100%;
-    min-height: 100%;
+    height: 100%;
     overflow: hidden;
     display: flex;
     flex-direction: row;
